Fix hero image alignment, center h1

--- a/cigars-for-beginners/blocks/hero/hero.css
+++ b/cigars-for-beginners/blocks/hero/hero.css
@@ -13,15 +13,15 @@ main .hero-container + .section {
 
 .hero {
   position: relative;
-  padding: 32px 0;
+  padding: 0 0 32px;
   min-height: 300px;
-  margin-top: calc(0px - var(--nav-height));
 }
 
 .hero h1 {
   max-width: var(--content-width);
   margin: 32px auto;
   padding: 0 32px;
+  text-align: center;
 }
 
 .hero picture {
@@ -36,6 +36,10 @@ main .hero-container + .section {
   width: 100%;
   height: 100%;
   max-height: 500px;
+}
+
+.hero p {
+  margin: 0;
 }
 
 @media (max-width: 768px) {
